DOC: notes about how buildbot works

--- a/master.cfg
+++ b/master.cfg
@@ -14,8 +14,45 @@
 # - if possible, forcebuild every builder on a particular slave (to check that it can)
 # - hookup with git post-commit hooks (instead of relying on poller)
 
-# This is a sample buildmaster config file. It must be installed as
-# 'master.cfg' in your buildmaster's base directory.
+""" A brief tour of buildbot
+
+To remind myself
+
+A ChangeSource looks for Changes.
+
+In our case we are using GitPoller ChangeSource to look for changes in our git
+repositories.
+
+When ChangeSource finds changes, it broadcasts them to all Schedulers.  Each
+Scheduler must decide if it wants to react to a Change.  It generally does this
+by filtering changes to select changes it will act on.
+
+We use SingleBranchSchedulers for this.  These obviously respond only to
+changes in one branch of a repository.
+
+A BuildSet is the association of (information about what changes need to be
+tested) and (Builders on which to test)
+
+If a Scheduler selects changes for action, it sends BuildSets to the system
+(the BuildMaster).  Therefore, a Scheduler needs to know its Builders. It gets
+these by name (string).
+
+For each BuildSet, the (changes to be tested) are set to each Builder.  Each
+of these requests is BuildRequest.
+
+A Builder accepts a BuildRequest and runs it on a BuildSlave.  It does this by
+using its own BuildFactory instance to make Builds.
+
+A Builder can have more than one associated BuildSlave.  In this case each
+associated BuildSlave is assumed to produce identical results, and the Builder
+can therefore choose at whim which BuildSlave to use.
+
+A Build has one or more Steps that should be run with a given (changes to be
+tested).
+
+One type of build Step is a Trigger, which activates a triggerable Scheduler,
+which can react any way it likes, including sending further BuildSets.
+"""
 
 # This is convenient for splitting sh commands into lists
 import shlex
@@ -130,7 +167,6 @@ nipy_alexis_bot = GithubBot('alexis-roche', 'nipy')
 dipy_bot = GithubBot('nipy', 'dipy')
 nipype_bot = GithubBot('nipy', 'nipype')
 
-                                             
 ####### CHANGESOURCES
 
 # the 'change_source' setting tells the buildmaster how it should find out
