NF: add windows bdist factory

--- a/master.cfg
+++ b/master.cfg
@@ -64,7 +64,7 @@ from buildbot.scheduler import Scheduler
 from buildbot.process.factory import BuildFactory
 from buildbot.steps.source import Git
 from buildbot.steps.shell import ShellCommand, SetProperty
-from buildbot.steps.transfer import FileDownload,FileUpload
+from buildbot.steps.transfer import FileDownload, FileUpload, DirectoryUpload
 from buildbot.process.properties import WithProperties
 from buildbot.config import BuilderConfig
 
@@ -97,7 +97,7 @@ osx_tiger_ppc_slaves = ['osx-mini']
 osx_tiger_intel_slaves = ['osx-10.4-intel']
 debian_ppc_slaves = ['debian-ppc-32']
 osx_leopard_intel_slaves = ['osx-10.5']
-xp_32_slaves = ['xp-standard', 'xp-mini']
+xp_32_slaves = ['xp-mini']
 sparc_slaves = ['nd-bb-slave-sparc']
 arm_slaves = ['arm-raspberry-pi']
 
@@ -271,6 +271,17 @@ def factory_buildout_nibabel(python='python2.6',numpy='1.6.1'):
     #f.addStep(nosetests_command('nibabel', doctests=True))
     return f
 
+
+def bdist_factory(git_url, python_cmd='python', out_dir='dist'):
+    factory = BuildFactory()
+    factory.addStep(Git(repourl=git_url, mode='copy', retry=(15, 5)))
+    factory.addStep(ShellCommand(command=shlex.split(
+        python_cmd + " setup.py bdist --formats=msi,wininst")))
+    factory.addStep(DirectoryUpload(slavesrc="dist",
+                masterdest="public_html/" + out_dir))
+    return factory
+
+
 c['builders'] = nibabel_bot.build_builders(
     (('nibabel-py2.6', linux_64_slaves),
      ('nibabel-py2.6-32', linux_32_slaves),
@@ -283,6 +294,14 @@ c['builders'] = nibabel_bot.build_builders(
      ('nibabel-py2.6-xp', xp_32_slaves),
      ('nibabel-py2.6-sparc', sparc_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctest nibabel'))
+# Add a bdist builder for windows
+c['builders'].append(BuilderConfig(
+            name='nibabel-bdist32',
+            slavenames=xp_32_slaves,
+            factory=bdist_factory(
+                'git://github.com/matthew-brett/nibabel.git',
+                'python',
+                 "dist-32")))
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
      ('nitime-py2.6-32', linux_32_slaves),
