NF: add first win7 builders
nibabel tests and bdist builders for win7

--- a/master.cfg
+++ b/master.cfg
@@ -98,6 +98,7 @@ osx_tiger_intel_slaves = ['osx-10.4-intel']
 debian_ppc_slaves = ['debian-ppc-32']
 osx_leopard_intel_slaves = ['osx-10.5']
 xp_32_slaves = ['xp-mini']
+win7_64_slaves = ['mike-win7-64']
 sparc_slaves = ['nd-bb-slave-sparc']
 arm_slaves = ['arm-raspberry-pi']
 
@@ -292,6 +293,7 @@ c['builders'] = nibabel_bot.build_builders(
      ('nibabel-py2.7-ppc', debian_ppc_slaves),
      ('nibabel-py2.6-arm', arm_slaves),
      ('nibabel-py2.6-xp', xp_32_slaves),
+     ('nibabel-py2.7-win7', win7_64_slaves),
      ('nibabel-py2.6-sparc', sparc_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctest nibabel'))
 # Add a bdist builder for windows
@@ -299,9 +301,16 @@ c['builders'].append(BuilderConfig(
             name='nibabel-bdist32',
             slavenames=xp_32_slaves,
             factory=bdist_factory(
-                'git://github.com/matthew-brett/nibabel.git',
+                'git://github.com/nipy/nibabel.git',
                 'python',
                  "dist-32")))
+c['builders'].append(BuilderConfig(
+            name='nibabel-bdist64',
+            slavenames=win7_64_slaves,
+            factory=bdist_factory(
+                'git://github.com/nipy/nibabel.git',
+                'python',
+                 "dist-64")))
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
      ('nitime-py2.6-32', linux_32_slaves),
