NF: add gitpoller scheduler for nibabel win7

--- a/master.cfg
+++ b/master.cfg
@@ -189,6 +189,7 @@ c['schedulers'] = [
     nibabel_bot.scheduler(['nibabel-py2.6',
                            'nibabel-py2.6-32',
                            'nibabel-py2.6-xp',
+                           'nibabel-py2.7-win7',
                            'nibabel-py2.6-sparc',
                            'nibabel-py2.7-ppc',
                            'nibabel-py2.6-arm',
