NF: add doc build scheduler

--- a/master.cfg
+++ b/master.cfg
@@ -37,7 +37,7 @@ If a Scheduler selects changes for action, it sends BuildSets to the system
 (the BuildMaster).  Therefore, a Scheduler needs to know its Builders. It gets
 these by name (string).
 
-For each BuildSet, the (changes to be tested) are set to each Builder.  Each
+For each BuildSet, the (changes to be tested) are sent to each Builder.  Each
 of these requests is BuildRequest.
 
 A Builder accepts a BuildRequest and runs it on a BuildSlave.  It does this by
@@ -61,6 +61,7 @@ from buildbot.buildslave import BuildSlave
 from buildbot.changes.gitpoller import GitPoller
 from buildbot.schedulers.filter import ChangeFilter
 from buildbot.scheduler import Scheduler
+from buildbot.schedulers import timed
 from buildbot.process.factory import BuildFactory
 from buildbot.steps.source import Git
 from buildbot.steps.shell import ShellCommand, SetProperty
@@ -233,6 +234,16 @@ c['schedulers'] = [
                        ]),
 ]
 
+# Add nightly development docs build
+c['schedulers'].append(
+    timed.Nightly(name='BeforeWork',
+         branch="master",
+         builderNames=['nipy-doc-builder'],
+         hour=2,
+         minute=23,
+         onlyIfChanged=True))
+
+
 ####### BUILDERS
 
 # The 'builders' list defines the Builders, which tell Buildbot how to perform a build:
@@ -284,6 +295,20 @@ def bdist_factory(git_url, python_cmd='python', out_dir='dist'):
     return factory
 
 
+def doc_factory(git_url, out_dir='devel/nipy'):
+    factory = BuildFactory()
+    factory.addStep(Git(repourl=git_url, mode='copy', retry=(15, 5)))
+    factory.addStep(ShellCommand(command=shlex.split(
+        "python setup.py build_ext --inplace")))
+    factory.addStep(SetProperty(command=shlex.split(
+        "python -c 'import os, sys; print os.getcwd(); sys.exit(0)'"),
+        property='absBuildDir'))
+    factory.addStep(ShellCommand(command='cd doc && make dist'),
+                    env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]})
+    factory.addStep(DirectoryUpload(slavesrc="doc/dist",
+                                    masterdest="public_html/" + out_dir))
+
+
 c['builders'] = nibabel_bot.build_builders(
     (('nibabel-py2.6', linux_64_slaves),
      ('nibabel-py2.6-32', linux_32_slaves),
@@ -299,19 +324,27 @@ c['builders'] = nibabel_bot.build_builders(
     shlex.split('nosetests --verbosity=3 --with-doctest nibabel'))
 # Add a bdist builder for windows
 c['builders'].append(BuilderConfig(
-            name='nibabel-bdist32',
-            slavenames=xp_32_slaves,
-            factory=bdist_factory(
-                'git://github.com/nipy/nibabel.git',
-                'python',
-                 "dist-32")))
+    name='nibabel-bdist32',
+    slavenames=xp_32_slaves,
+    factory=bdist_factory(
+        'git://github.com/nipy/nibabel.git',
+        'python',
+        "dist-32")))
 c['builders'].append(BuilderConfig(
-            name='nibabel-bdist64',
-            slavenames=win7_64_slaves,
-            factory=bdist_factory(
-                'git://github.com/nipy/nibabel.git',
-                'python',
-                 "dist-64")))
+    name='nibabel-bdist64',
+    slavenames=win7_64_slaves,
+    factory=bdist_factory(
+        'git://github.com/nipy/nibabel.git',
+        'python',
+        "dist-64")))
+# Add a nightly docs builder
+c['builders'].append(BuilderConfig(
+    name='nipy-doc-builder',
+    slavenames=linux_64_slaves,
+    factory=doc_factory(
+        'git://github.com/nipy/nipy.git',
+        "devel/nipy")))
+
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
      ('nitime-py2.6-32', linux_32_slaves),
