Fix doc_factory to return factory

--- a/master.cfg
+++ b/master.cfg
@@ -307,6 +307,7 @@ def doc_factory(git_url, out_dir='devel/nipy'):
                     env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]})
     factory.addStep(DirectoryUpload(slavesrc="doc/dist",
                                     masterdest="public_html/" + out_dir))
+    return factory
 
 
 c['builders'] = nibabel_bot.build_builders(
