Fixup messed up brackets etc for doc builder

--- a/master.cfg
+++ b/master.cfg
@@ -303,10 +303,10 @@ def doc_factory(git_url, out_dir='devel/nipy'):
     factory.addStep(SetProperty(command=shlex.split(
         "python -c 'import os, sys; print os.getcwd(); sys.exit(0)'"),
         property='absBuildDir'))
-    factory.addStep(ShellCommand(command='cd doc && make dist'),
-                    env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]})
+    factory.addStep(ShellCommand(command='cd doc && make dist',
+        env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
     factory.addStep(DirectoryUpload(slavesrc="doc/dist",
-                                    masterdest="public_html/" + out_dir))
+                masterdest="public_html/" + out_dir))
     return factory
 
 
