NF: add nibabel doc build, move doc output

--- a/master.cfg
+++ b/master.cfg
@@ -238,7 +238,9 @@ c['schedulers'] = [
 c['schedulers'].append(
     timed.Nightly(name='BeforeWork',
          branch="master",
-         builderNames=['nipy-doc-builder'],
+         builderNames=['nipy-doc-builder',
+                       'nibabel-doc-builder',
+                       ],
          hour=2,
          minute=23,
          onlyIfChanged=True))
@@ -295,7 +297,10 @@ def bdist_factory(git_url, python_cmd='python', out_dir='dist'):
     return factory
 
 
-def doc_factory(git_url, out_dir='devel/nipy'):
+def doc_factory(git_url,
+                doc_build_cmd="cd doc && make dist",
+                built_docs="doc/dist",
+                project='nipy'):
     factory = BuildFactory()
     factory.addStep(Git(repourl=git_url, mode='copy', retry=(15, 5)))
     factory.addStep(ShellCommand(command=shlex.split(
@@ -303,10 +308,10 @@ def doc_factory(git_url, out_dir='devel/nipy'):
     factory.addStep(SetProperty(command=shlex.split(
         "python -c 'import os, sys; print os.getcwd(); sys.exit(0)'"),
         property='absBuildDir'))
-    factory.addStep(ShellCommand(command='cd doc && make dist',
-        env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
-    factory.addStep(DirectoryUpload(slavesrc="doc/dist",
-                masterdest="public_html/" + out_dir))
+    factory.addStep(ShellCommand(command=doc_build_cmd,
+                env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
+    factory.addStep(DirectoryUpload(slavesrc=built_docs,
+                masterdest="public_html/nightly/" + project + '/doc'))
     return factory
 
 
@@ -338,13 +343,23 @@ c['builders'].append(BuilderConfig(
         'git://github.com/nipy/nibabel.git',
         'python',
         "dist-64")))
-# Add a nightly docs builder
+# Add nightly docs builders
 c['builders'].append(BuilderConfig(
     name='nipy-doc-builder',
     slavenames=linux_64_slaves,
     factory=doc_factory(
         'git://github.com/nipy/nipy.git',
-        "devel/nipy")))
+        doc_build_cmd="cd doc && make dist",
+        built_docs="doc/dist",
+        project="nipy")))
+c['builders'].append(BuilderConfig(
+    name='nibabel-doc-builder',
+    slavenames=linux_64_slaves,
+    factory=doc_factory(
+        'git://github.com/nipy/nibabel.git',
+        doc_build_cmd="cd doc && make html",
+        built_docs="build/html",
+        project="nibabel")))
 
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
