--- a/master.cfg
+++ b/master.cfg
@@ -95,9 +95,9 @@ linux_64_slaves = ['tom-standard']
 linux_32_slaves = ['bongoslave']
 osx_leopard_ppc_slaves = ['osx-10.5-ppc']
 osx_tiger_ppc_slaves = ['osx-mini']
-osx_tiger_intel_slaves = ['osx-10.4-intel']
 debian_ppc_slaves = ['debian-ppc-32']
 osx_leopard_intel_slaves = ['osx-10.5']
+osx_snowleopard_slaves = ['osx-10.6']
 xp_32_slaves = ['xp-mini']
 win7_64_slaves = ['mike-win7-64']
 sparc_slaves = ['nd-bb-slave-sparc']
@@ -195,7 +195,7 @@ c['schedulers'] = [
                            'nibabel-py2.7-ppc',
                            'nibabel-py2.6-arm',
                            'nibabel-py2.5-osx-10.4-ppc',
-                           'nibabel-py2.7-osx-10.4-intel',
+                           'nibabel-py2.7-osx-10.6',
                            'nibabel-py2.6-osx-10.5-ppc',
                            'nibabel-py2.6-osx-10.5-intel',
                           ]),
@@ -203,7 +203,7 @@ c['schedulers'] = [
                           'nitime-py2.6-32',
                           'nitime-py2.6-xp',
                           'nitime-py2.5-osx-10.4-ppc',
-                          'nitime-py2.7-osx-10.4-intel',
+                          'nitime-py2.7-osx-10.6',
                           'nitime-py2.6-osx-10.5-ppc',
                           'nitime-py2.6-osx-10.5-intel',
                          ]),
@@ -214,7 +214,7 @@ c['schedulers'] = [
                         'nipy-py2.7-ppc',
                         'nipy-py2.6-arm',
                         'nipy-py2.5-osx-10.4-ppc',
-                        'nipy-py2.7-osx-10.4-intel',
+                        'nipy-py2.7-osx-10.6',
                         'nipy-py2.6-osx-10.5-ppc',
                         'nipy-py2.6-osx-10.5-intel',
                        ]),
@@ -222,7 +222,7 @@ c['schedulers'] = [
                         'dipy-py2.6-32',
                         'dipy-py2.6-xp',
                         'dipy-py2.5-osx-10.4-ppc',
-                        'dipy-py2.7-osx-10.4-intel',
+                        'dipy-py2.7-osx-10.6',
                         'dipy-py2.6-osx-10.5-ppc',
                         'dipy-py2.6-osx-10.5-intel',
                        ]),
@@ -319,7 +319,7 @@ c['builders'] = nibabel_bot.build_builders(
     (('nibabel-py2.6', linux_64_slaves),
      ('nibabel-py2.6-32', linux_32_slaves),
      ('nibabel-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
-     ('nibabel-py2.7-osx-10.4-intel', osx_tiger_intel_slaves),
+     ('nibabel-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('nibabel-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nibabel-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nibabel-py2.7-ppc', debian_ppc_slaves),
@@ -365,7 +365,7 @@ c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
      ('nitime-py2.6-32', linux_32_slaves),
      ('nitime-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
-     ('nitime-py2.7-osx-10.4-intel', osx_tiger_intel_slaves),
+     ('nitime-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('nitime-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nitime-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nitime-py2.6-arm', arm_slaves),
@@ -375,7 +375,7 @@ c['builders'] += nitime_arokem_bot.build_builders(
     (('nitime-py2.6-arokem', linux_64_slaves),
      ('nitime-py2.6-arokem-32', linux_32_slaves),
      ('nitime-py2.5-arokem-osx-10.4-ppc', osx_tiger_ppc_slaves),
-     ('nitime-py2.7-arokem-osx-10.4-intel', osx_tiger_intel_slaves),
+     ('nitime-py2.7-arokem-osx-10.6', osx_snowleopard_slaves),
      ('nitime-py2.6-arokem-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nitime-py2.6-arokem-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nitime-py2.6-arokem-xp', xp_32_slaves)),
@@ -384,7 +384,7 @@ c['builders'] += nipy_bot.build_builders(
     (('nipy-py2.6', linux_64_slaves),
      ('nipy-py2.6-32', linux_32_slaves),
      ('nipy-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
-     ('nipy-py2.7-osx-10.4-intel', osx_tiger_intel_slaves),
+     ('nipy-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('nipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nipy-py2.7-ppc', debian_ppc_slaves),
@@ -414,7 +414,7 @@ c['builders'] += dipy_bot.build_builders(
     (('dipy-py2.6', linux_64_slaves),
      ('dipy-py2.6-32', linux_32_slaves),
      ('dipy-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
-     ('dipy-py2.7-osx-10.4-intel', osx_tiger_intel_slaves),
+     ('dipy-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('dipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('dipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('dipy-py2.6-arm', arm_slaves),
