RF: refactor doc and code builders
Put more definitions into the github containers and use these as defaults. Add
changesource to nightly schedulers - it seems they are needed to identify the
repository to the builder.

--- a/master.cfg
+++ b/master.cfg
@@ -113,10 +113,13 @@ c['slavePortnum'] = 9989
 
 # Helper functions and constants
 class GithubBot(object):
-    def __init__(self, organization, repo):
+    def __init__(self, organization, repo, test_cmd, doc_build_cmd=None, built_doc_src=None):
         self.organization = organization
         self.repo = repo
         self.git_url = "git://github.com/%s/%s.git" % (organization, repo)
+        self.test_cmd = test_cmd
+        self.doc_build_cmd = doc_build_cmd
+        self.built_doc_src = built_doc_src
 
     def poller(self, branch="master", interval=300):
         return GitPoller(
@@ -135,7 +138,21 @@ class GithubBot(object):
                         treeStableTimer=None,
                         builderNames=buildernames)
 
-    def factory(self, test_command):
+    def nightly_doc_scheduler(self, buildernames,
+                              hour = 2, minute = 23, ifchanged=True):
+        if isinstance(buildernames, basestring):
+            buildernames = [buildernames]
+        name = "%s-%s-nightly-doc" % (self.organization, self.repo)
+        changefilter = ChangeFilter(repository=self.git_url)
+        return timed.Nightly(name=name,
+                branch="master",
+                builderNames=buildernames,
+                change_filter=changefilter,
+                hour=hour,
+                minute=minute,
+                onlyIfChanged=ifchanged)
+
+    def _code_build_factory(self):
         factory = BuildFactory()
         factory.addStep(Git(repourl=self.git_url, mode='copy', retry=(15, 5)))
         factory.addStep(ShellCommand(command=shlex.split(
@@ -143,12 +160,37 @@ class GithubBot(object):
         factory.addStep(SetProperty(command=shlex.split(
             "python -c 'import os, sys; print os.getcwd(); sys.exit(0)'"),
             property='absBuildDir'))
-        factory.addStep(ShellCommand(command=test_command,
+        return factory
+
+    def factory(self, test_cmd=None):
+        if test_cmd is None:
+            test_cmd = self.test_cmd    
+        factory = self._code_build_factory()
+        factory.addStep(ShellCommand(command=test_cmd,
             env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
         return factory
 
-    def build_builders(self, name_slavenames, test_command):
-        factory = self.factory(test_command)
+    def doc_factory(self,
+                    doc_build_cmd=None,
+                    built_doc_src=None):
+        if doc_build_cmd is None:
+            doc_build_cmd = self.doc_build_cmd
+        if built_doc_src is None:
+            built_doc_src = self.built_doc_src
+        if None in (doc_build_cmd, built_doc_src):
+            raise ValueError("Need defined build command and doc source")
+        factory = self._code_build_factory()
+        factory.addStep(ShellCommand(command=doc_build_cmd,
+                    env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
+        factory.addStep(DirectoryUpload(slavesrc=built_doc_src,
+                    masterdest="public_html/nightly/" + self.repo + '/doc'))
+        return factory
+
+    def build_builders(self, name_slavenames, test_cmd=None):
+        factory = self.factory(test_cmd)
+        return self._factory_builders(factory, name_slavenames)
+
+    def _factory_builders(self, factory, name_slavenames):
         builders = []
         for name, slavelist in name_slavenames:
             if isinstance(slavelist, basestring):
@@ -159,15 +201,61 @@ class GithubBot(object):
                 factory=factory))
         return builders
 
+    def build_doc_builders(self, name_slavenames, doc_build_cmd=None, built_doc_src=None):
+        factory = self.doc_factory(doc_build_cmd, built_doc_src)
+        return self._factory_builders(factory, name_slavenames)
 
-nibabel_bot = GithubBot('nipy', 'nibabel')
-nitime_bot = GithubBot('nipy', 'nitime')
-nitime_arokem_bot = GithubBot('arokem','nitime')
-nipy_bot = GithubBot('nipy', 'nipy')
-nipy_mbi_bot = GithubBot('matthew-brett', 'nipy')
-nipy_alexis_bot = GithubBot('alexis-roche', 'nipy')
-dipy_bot = GithubBot('nipy', 'dipy')
-nipype_bot = GithubBot('nipy', 'nipype')
+
+def nptest_command(pkg_name,
+                   verbose=10,
+                   doctests=False,
+                   python='python',
+                   cd=False,
+                   stdout=False):
+    """ Run tests from new directory """
+    pystr = ''
+    if cd:
+        pystr += "import os; os.chdir('..');"
+    pystr += ("import sys; import %s; sys.exit(not %s.test(doctests=%s"
+              % (pkg_name, pkg_name, doctests))
+    if verbose != None:
+        pystr += ', verbose=%d' % verbose
+    pystr += ").wasSuccessful())"
+    return [python, '-c', "%s" % pystr]
+
+
+nibabel_bot = GithubBot('nipy', 'nibabel',
+    test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest nibabel'),
+    doc_build_cmd = "cd doc && make html",
+    built_doc_src = "build/html"
+)
+nitime_bot = GithubBot('nipy', 'nitime',
+    test_cmd = nptest_command('nitime', verbose=None, cd=True)
+)
+nitime_arokem_bot = GithubBot('arokem','nitime',
+    test_cmd = nptest_command('nitime', verbose=None, cd=True)
+)
+nipy_bot = GithubBot('nipy', 'nipy',
+    test_cmd = nptest_command('nipy', doctests=True, cd=True),
+    doc_build_cmd = "cd doc && make dist",
+    built_doc_src = "doc/dist"
+)
+nipy_mbi_bot = GithubBot('matthew-brett', 'nipy',
+    test_cmd = nptest_command('nipy', doctests=True, cd=True),
+    doc_build_cmd = "cd doc && make dist",
+    built_doc_src = "doc/dist"
+)
+nipy_alexis_bot = GithubBot('alexis-roche', 'nipy',
+    test_cmd = nptest_command('nipy', doctests=True, cd=True),
+    doc_build_cmd = "cd doc && make dist",
+    built_doc_src = "doc/dist"
+)
+dipy_bot = GithubBot('nipy', 'dipy',
+    test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest dipy'),
+)
+nipype_bot = GithubBot('nipy', 'nipype',
+    test_cmd = nptest_command('nipype', doctests=True, cd=True)
+)
 
 ####### CHANGESOURCES
 
@@ -232,43 +320,15 @@ c['schedulers'] = [
                         'nipype-py2.6-osx-10.5-ppc',
                         'nipype-py2.6-osx-10.5-intel',
                        ]),
+    nipy_bot.nightly_doc_scheduler(['nipy-doc-builder'], 2, 01, True),
+    nibabel_bot.nightly_doc_scheduler(['nibabel-doc-builder'], 2, 20, True),
 ]
-
-# Add nightly development docs build
-c['schedulers'].append(
-    timed.Nightly(name='BeforeWork',
-         branch="master",
-         builderNames=['nipy-doc-builder',
-                       'nibabel-doc-builder',
-                       ],
-         hour=2,
-         minute=23,
-         onlyIfChanged=True))
-
 
 ####### BUILDERS
 
 # The 'builders' list defines the Builders, which tell Buildbot how to perform a build:
 # what steps, and which slaves can execute them.  Note that any particular build will
 # only take place on one slave.
-
-def nptest_command(pkg_name,
-                   verbose=10,
-                   doctests=False,
-                   python='python',
-                   cd=False,
-                   stdout=False):
-    """ Run tests from new directory """
-    pystr = ''
-    if cd:
-        pystr += "import os; os.chdir('..');"
-    pystr += ("import sys; import %s; sys.exit(not %s.test(doctests=%s"
-              % (pkg_name, pkg_name, doctests))
-    if verbose != None:
-        pystr += ', verbose=%d' % verbose
-    pystr += ").wasSuccessful())"
-    return [python, '-c', "%s" % pystr]
-
 
 def factory_buildout_nibabel(python='python2.6',numpy='1.6.1'):
     f = BuildFactory()
@@ -297,37 +357,8 @@ def bdist_factory(git_url, python_cmd='python', out_dir='dist'):
     return factory
 
 
-def doc_factory(git_url,
-                doc_build_cmd="cd doc && make dist",
-                built_docs="doc/dist",
-                project='nipy'):
-    factory = BuildFactory()
-    factory.addStep(Git(repourl=git_url, mode='copy', retry=(15, 5)))
-    factory.addStep(ShellCommand(command=shlex.split(
-        "python setup.py build_ext --inplace")))
-    factory.addStep(SetProperty(command=shlex.split(
-        "python -c 'import os, sys; print os.getcwd(); sys.exit(0)'"),
-        property='absBuildDir'))
-    factory.addStep(ShellCommand(command=doc_build_cmd,
-                env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
-    factory.addStep(DirectoryUpload(slavesrc=built_docs,
-                masterdest="public_html/nightly/" + project + '/doc'))
-    return factory
+c['builders'] = []
 
-
-c['builders'] = nibabel_bot.build_builders(
-    (('nibabel-py2.6', linux_64_slaves),
-     ('nibabel-py2.6-32', linux_32_slaves),
-     ('nibabel-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
-     ('nibabel-py2.7-osx-10.6', osx_snowleopard_slaves),
-     ('nibabel-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
-     ('nibabel-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
-     ('nibabel-py2.7-ppc', debian_ppc_slaves),
-     ('nibabel-py2.6-arm', arm_slaves),
-     ('nibabel-py2.6-xp', xp_32_slaves),
-     ('nibabel-py2.7-win7', win7_64_slaves),
-     ('nibabel-py2.6-sparc', sparc_slaves)),
-    shlex.split('nosetests --verbosity=3 --with-doctest nibabel'))
 # Add a bdist builder for windows
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist32',
@@ -343,24 +374,26 @@ c['builders'].append(BuilderConfig(
         'git://github.com/nipy/nibabel.git',
         'python',
         "dist-64")))
-# Add nightly docs builders
-c['builders'].append(BuilderConfig(
-    name='nipy-doc-builder',
-    slavenames=linux_64_slaves,
-    factory=doc_factory(
-        'git://github.com/nipy/nipy.git',
-        doc_build_cmd="cd doc && make dist",
-        built_docs="doc/dist",
-        project="nipy")))
-c['builders'].append(BuilderConfig(
-    name='nibabel-doc-builder',
-    slavenames=linux_64_slaves,
-    factory=doc_factory(
-        'git://github.com/nipy/nibabel.git',
-        doc_build_cmd="cd doc && make html",
-        built_docs="build/html",
-        project="nibabel")))
 
+# Add nightly docs builders
+c['builders'] += nipy_bot.build_doc_builders(
+    (('nipy-doc-builder', linux_64_slaves),))
+c['builders'] += nibabel_bot.build_doc_builders(
+    (('nibabel-doc-builder', linux_64_slaves),))
+
+# Code builders
+c['builders'] += nibabel_bot.build_builders(
+    (('nibabel-py2.6', linux_64_slaves),
+     ('nibabel-py2.6-32', linux_32_slaves),
+     ('nibabel-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
+     ('nibabel-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('nibabel-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('nibabel-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
+     ('nibabel-py2.7-ppc', debian_ppc_slaves),
+     ('nibabel-py2.6-arm', arm_slaves),
+     ('nibabel-py2.6-xp', xp_32_slaves),
+     ('nibabel-py2.7-win7', win7_64_slaves),
+     ('nibabel-py2.6-sparc', sparc_slaves)))
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
      ('nitime-py2.6-32', linux_32_slaves),
@@ -369,8 +402,7 @@ c['builders'] += nitime_bot.build_builders(
      ('nitime-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nitime-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nitime-py2.6-arm', arm_slaves),
-     ('nitime-py2.6-xp', xp_32_slaves)),
-    nptest_command('nitime', verbose=None, cd=True))
+     ('nitime-py2.6-xp', xp_32_slaves)))
 c['builders'] += nitime_arokem_bot.build_builders(
     (('nitime-py2.6-arokem', linux_64_slaves),
      ('nitime-py2.6-arokem-32', linux_32_slaves),
@@ -378,8 +410,7 @@ c['builders'] += nitime_arokem_bot.build_builders(
      ('nitime-py2.7-arokem-osx-10.6', osx_snowleopard_slaves),
      ('nitime-py2.6-arokem-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nitime-py2.6-arokem-osx-10.5-intel', osx_leopard_intel_slaves),
-     ('nitime-py2.6-arokem-xp', xp_32_slaves)),
-    nptest_command('nitime', verbose=None, cd=True))
+     ('nitime-py2.6-arokem-xp', xp_32_slaves)))
 c['builders'] += nipy_bot.build_builders(
     (('nipy-py2.6', linux_64_slaves),
      ('nipy-py2.6-32', linux_32_slaves),
@@ -390,24 +421,21 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.7-ppc', debian_ppc_slaves),
      ('nipy-py2.6-arm', arm_slaves),
      ('nipy-py2.6-xp', xp_32_slaves),
-     ('nipy-py2.6-sparc', sparc_slaves)),
-    nptest_command('nipy', doctests=True, cd=True))
+     ('nipy-py2.6-sparc', sparc_slaves)))
 c['builders'] += nipy_mbi_bot.build_builders(
     (('nipy-py2.6-mbi', linux_64_slaves),
      ('nipy-py2.6-mbi-32', linux_32_slaves),
      ('nipy-py2.5-mbi-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('nipy-py2.6-mbi-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nipy-py2.6-mbi-osx-10.5-intel', osx_leopard_intel_slaves),
-     ('nipy-py2.6-mbi-xp', xp_32_slaves)),
-    nptest_command('nipy', doctests=True, cd=True))
+     ('nipy-py2.6-mbi-xp', xp_32_slaves)))
 c['builders'] += nipy_alexis_bot.build_builders(
     (('nipy-py2.6-alexis', linux_64_slaves),
      ('nipy-py2.6-alexis-32', linux_32_slaves),
      ('nipy-py2.5-alexis-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('nipy-py2.6-alexis-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nipy-py2.6-alexis-osx-10.5-intel', osx_leopard_intel_slaves),
-     ('nipy-py2.6-alexis-xp', xp_32_slaves)),
-    nptest_command('nipy', doctests=True, cd=True))
+     ('nipy-py2.6-alexis-xp', xp_32_slaves)))
 # The dipy builder seems to fail early sometimes, on OSX, maybe due to:
 # http://bugs.python.org/issue8458
 c['builders'] += dipy_bot.build_builders(
@@ -418,16 +446,14 @@ c['builders'] += dipy_bot.build_builders(
      ('dipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('dipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('dipy-py2.6-arm', arm_slaves),
-     ('dipy-py2.6-xp', xp_32_slaves)),
-    shlex.split('nosetests --verbosity=3 --with-doctest dipy'))
+     ('dipy-py2.6-xp', xp_32_slaves)))
 c['builders'] += nipype_bot.build_builders(
     (('nipype-py2.6', linux_64_slaves),
      ('nipype-py2.6-32', linux_32_slaves),
      ('nipype-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('nipype-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nipype-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
-     ('nipype-py2.6-arm', arm_slaves)),
-    nptest_command('nipype', doctests=True, cd=True))
+     ('nipype-py2.6-arm', arm_slaves)))
 
 c['builders'].append(
     BuilderConfig(name="buildout-test2.6",
@@ -441,6 +467,7 @@ c['builders'].append(
     BuilderConfig(name="buildout-test2.4",
       slavenames=experimental,
       factory=factory_buildout_nibabel('python2.4')))
+
 ####### STATUS TARGETS
 
 # 'status' is a list of Status Targets. The results of each build will be
