RF: use virtual frame buffer for dipy linux builds
The dipy builds on linux were calling traitsui or VTK and then crashing due to
the lack of an X display.  Work round this by using a virtual frame buffer.

--- a/master.cfg
+++ b/master.cfg
@@ -253,6 +253,11 @@ nipy_alexis_bot = GithubBot('alexis-roche', 'nipy',
 dipy_bot = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest dipy'),
 )
+# dipy bot for linux machines with optional dependencies that need an X window
+# for testing
+dipy_bot_nox = GithubBot('nipy', 'dipy',
+    test_cmd = shlex.split('xvfb-run --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --with-doctest dipy'),
+)
 nipype_bot = GithubBot('nipy', 'nipype',
     test_cmd = nptest_command('nipype', doctests=True, cd=True)
 )
@@ -438,9 +443,11 @@ c['builders'] += nipy_alexis_bot.build_builders(
      ('nipy-py2.6-alexis-xp', xp_32_slaves)))
 # The dipy builder seems to fail early sometimes, on OSX, maybe due to:
 # http://bugs.python.org/issue8458
-c['builders'] += dipy_bot.build_builders(
+c['builders'] += dipy_bot_nox.build_builders(
     (('dipy-py2.6', linux_64_slaves),
      ('dipy-py2.6-32', linux_32_slaves),
+))
+c['builders'] += dipy_bot.build_builders((
      ('dipy-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('dipy-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('dipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
