BF: correct vim syntax specifier

--- a/master.cfg
+++ b/master.cfg
@@ -1,6 +1,6 @@
 # -*- python -*-
 # ex: set syntax=python:
-# vim: set ft=python
+# vim: ft=python
 # NIpy buildBOT Master Instance config
 #
 # [ TODO ]      (in no particular order)
