RF: add nipy binary builders for osx and windows

--- a/master.cfg
+++ b/master.cfg
@@ -351,11 +351,14 @@ def factory_buildout_nibabel(python='python2.6',numpy='1.6.1'):
     return f
 
 
-def bdist_factory(git_url, python_cmd='python', out_dir='dist'):
+def bdist_factory(git_url,
+                  cmds,
+                  out_dir='dist',
+                  posix=True):
     factory = BuildFactory()
     factory.addStep(Git(repourl=git_url, mode='copy', retry=(15, 5)))
-    factory.addStep(ShellCommand(command=shlex.split(
-        python_cmd + " setup.py bdist --formats=msi,wininst")))
+    for cmd in cmds:
+        factory.addStep(ShellCommand(command=shlex.split(cmd, posix=posix)))
     factory.addStep(DirectoryUpload(slavesrc="dist",
                 masterdest="public_html/" + out_dir))
     return factory
@@ -369,16 +372,60 @@ c['builders'].append(BuilderConfig(
     slavenames=xp_32_slaves,
     factory=bdist_factory(
         'git://github.com/nipy/nibabel.git',
-        'python',
-        "dist-32")))
+        ['python setup.py bdist --formats=wininst'],
+        "dist-32"))
+)
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist64',
     slavenames=win7_64_slaves,
     factory=bdist_factory(
         'git://github.com/nipy/nibabel.git',
-        'python',
-        "dist-64")))
-
+        ['python setup.py bdist --formats=wininst'],
+        "dist-64"))
+)
+# The Python32 numpy 1.6.2 installation needs patching according to
+# git diff ad9c2f4~1..ad9c2f4
+# to remove use of __stdout__ and __stderr__ in numpy distutils
+c['builders'].append(BuilderConfig(
+    name='nipy-bdist32',
+    slavenames=xp_32_slaves,
+    factory=bdist_factory(
+        'git://github.com/nipy/nipy.git',
+        [r'c:\Python27\python.exe tools\touch_cython_cs.py',
+        r'c:\Python26\python.exe setup.py bdist --formats=wininst',
+        r'c:\Python27\python.exe setup.py bdist --formats=wininst',
+        r'c:\Python32\python.exe setup.py bdist --formats=wininst'],
+        "nipy-dist",
+        posix=False))
+)
+# Add bdist builders for OSX
+c['builders'].append(BuilderConfig(
+    name='nipy-bdist-mpkg-2.6',
+    slavenames=['osx-10.6'],
+    factory=bdist_factory(
+        'git://github.com/nipy/nipy.git',
+        ['/Library/Frameworks/Python.framework/Versions/2.6/bin/python setup.py bdist_mpkg',
+        '/Library/Frameworks/Python.framework/Versions/2.6/bin/python setup.py bdist_egg'],
+        "nipy-dist")
+))
+c['builders'].append(BuilderConfig(
+    name='nipy-bdist-mpkg-2.7',
+    slavenames=['osx-10.6'],
+    factory=bdist_factory(
+        'git://github.com/nipy/nipy.git',
+        ['/Library/Frameworks/Python.framework/Versions/2.7/bin/python setup.py bdist_mpkg',
+        '/Library/Frameworks/Python.framework/Versions/2.7/bin/python setup.py bdist_egg'],
+        "nipy-dist")
+))
+c['builders'].append(BuilderConfig(
+    name='nipy-bdist-mpkg-3.3',
+    slavenames=['osx-10.6'],
+    factory=bdist_factory(
+        'git://github.com/nipy/nipy.git',
+        ['/Library/Frameworks/Python.framework/Versions/3.3/bin/python3 setup.py bdist_mpkg',
+        '/Library/Frameworks/Python.framework/Versions/3.3/bin/python3 setup.py bdist_egg'],
+        "nipy-dist")
+))
 # Add nightly docs builders
 c['builders'] += nipy_bot.build_doc_builders(
     (('nipy-doc-builder', linux_64_slaves),))
